# personal-project-portfolio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  create_shortcut.sh  launch.sh  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: 404.html  index.html  mkdocs.yml
docs/architecture/: index.html
docs/data-model/: index.html
docs/design-patterns/: index.html
docs/development/: index.html
docs/guide/: index.html
docs/search/: search_index.json
docs/src/: data-model.md  design-patterns.md  development.md  index.md
docs/testing/: index.html
guide/: c_milestone_paradigm.dita  c_portfolio_paradigm.dita  c_project_lifecycle.dita  c_scoring_model.dita  c_session_paradigm.dita  c_weekly_review_concept.dita  glossary.dita  p_weekly_workflow.dita  portfolio-manager-guide.ditamap  r_config_file.dita  r_markdown_syntax.dita  r_milestone_states.dita  r_project_states.dita  r_scoring_algorithm.dita  r_session_states.dita  r_ui_reference.dita  t_archive_project.dita  t_complete_weekly_review.dita  t_configure_settings.dita  t_create_milestone.dita  t_create_project.dita  t_create_session.dita  t_first_launch.dita  t_install_cli.dita  t_install_macos.dita  t_plan_weekly_sessions.dita  t_update_milestone.dita  t_update_session_status.dita  t_write_project_plan.dita  ts_app_wont_launch.dita  ts_database_error.dita  ts_mermaid_not_rendering.dita  ts_sessions_missing.dita  ts_tk_not_found.dita
guide/images/: README.md  app-layout.mmd  milestone-lifecycle.mmd  (+5 more)
srs/: Portfolio-Manager-V2-SRS.md
tests/: conftest.py
tools/: prepare_guide.py
(+131 files in other folders)
